--- a/src/components/fr/Philosophy.astro
+++ b/src/components/fr/Philosophy.astro
@@ -2,9 +2,9 @@
 // src/components/Philosophy.astro
 import MeshGradient from '../MeshGradient';
 ---
-<section id="philosophy" class="bg-[var(--color-noir)] relative overflow-hidden flex flex-col items-center justify-center min-h-screen w-full py-24">
+<section id="philosophy" class="bg-[var(--color-noir)] relative overflow-hidden flex flex-col items-center justify-center md:min-h-screen w-full py-24">
   
-  <div class="sticky top-0 h-screen w-full flex items-center justify-center overflow-hidden">
+  <div class="md:sticky md:top-0 md:h-screen w-full flex items-center justify-center overflow-hidden">
     
     <MeshGradient client:load />
 
