--- a/src/components/Preloader.astro
+++ b/src/components/Preloader.astro
@@ -2,12 +2,11 @@
 // src/components/Preloader.astro
 ---
 <div id="preloader" class="fixed inset-0 z-[100] flex flex-col items-center justify-center bg-[var(--color-noir)]">
-  <div class="relative mb-8">
+  <div class="mb-8 opacity-0" id="preloader-logo">
     <img 
-      id="preloader-logo"
       src="/images/logo-caveduke.png" 
       alt="Caveduke" 
-      class="h-20 md:h-28 w-auto brightness-0 invert opacity-0 scale-95"
+      class="h-20 md:h-28 w-auto brightness-0 invert"
     />
   </div>
   
@@ -15,6 +14,10 @@
     EST. 1985
   </p>
 </div>
+
+<style>
+  /* removed old SVG styles */
+</style>
 
 <script>
   import { gsap } from 'gsap';
@@ -24,9 +27,8 @@
 
     tl.to('#preloader-logo', {
       opacity: 1,
-      scale: 1,
       duration: 1.2,
-      ease: 'power3.out'
+      ease: 'power2.out'
     })
     .to('#preloader-est', {
       opacity: 1,
@@ -37,7 +39,7 @@
       yPercent: -100,
       duration: 1,
       ease: 'power4.inOut',
-      delay: 0.5
+      delay: 0.6
     });
   });
 </script>
