--- a/src/components/en/Hero.astro
+++ b/src/components/en/Hero.astro
@@ -23,8 +23,8 @@ import GoldenParticles from '../GoldenParticles';
 
     <div class="overflow-hidden pb-4">
       <h1 class="font-display flex flex-col items-center justify-center leading-none tracking-[0.01em] translate-y-full opacity-0 anim-title" data-speed="0.8">
-        <span class="text-3xl md:text-5xl lg:text-6xl text-[var(--color-gold)] italic font-light mb-2">Wine Cabinets</span>
-        <span class="text-6xl md:text-8xl lg:text-[7rem] text-[var(--color-ivory)]">Caveduke</span>
+        <span class="text-3xl md:text-5xl lg:text-6xl text-[var(--color-gold)] italic font-light mb-4">Wine Cabinets</span>
+        <img src="/images/logo-caveduke.png" alt="Caveduke" class="h-16 md:h-24 lg:h-28 w-auto brightness-0 invert" />
       </h1>
     </div>
 
